# axyftp

./: BUGS  CHANGES  LICENSE  Makefile  Makefile.am  Makefile.in  README  TODO  aclocal.m4  config.hlp  config.status  configure  configure.in
doc/: Makefile  Makefile.am  Makefile.in  axyftp.1
doc/help/: Makefile  Makefile.am  Makefile.in  axyftp.html  glossary.html  help.html  intro.html  main.html  options.html  panels.html  problems.html  session.html
dtwidget/: INSTALL  Makefile.am  Makefile.in  README.ComboBox  acinclude.m4  aclocal.m4  configure  configure.in
dtwidget/Dt/: ComboBox.c  ComboBox.h  ComboBoxP.h  Makefile.am  Makefile.in  demo.c
dtwidget/cwikla/: ComboBox.c  ComboBox.h  ComboBoxP.h  Makefile.am  Makefile.in  README.cwikla
dtwidget/cwikla-clean/: ComboBox.c  ComboBox.h  ComboBoxP.h  Makefile.am  Makefile.in
dtwidget/jra/: Makefile.am  Makefile.in  Makefile.orig  README.SpinButton  SpinButton.c  SpinButton.h  SpinButtonP.h  demo.c
dtwidget/moz/: Makefile.am  Makefile.in
dtwidget/moz-clean/: ComboBox.c  ComboBox.h  Makefile.am  Makefile.in  Makefile.orig  demo.c
dtwidget/orig/: ComboBox.c  ComboBox.h  ComboBoxP.h  Makefile.am  Makefile.in  README.SpinButton  SpinButton.c
icons/: Makefile  Makefile.am  Makefile.in  axyftp-ball128.xpm  axyftp-ball16.xpm  axyftp-ball32.xpm  axyftp-ball64.xpm  axyftp-combo-purple128.xpm  axyftp-combo128.xpm
macro/: Makefile  Makefile.am  Makefile.in  axy_lib_xthreads.m4  axy_path_dt.m4  axy_path_motif.m4  axy_path_xmaxy.m4  axy_path_xpm.m4
src/: Makefile  Makefile.am  Makefile.in  Makefile.orig  about_dialog.c  about_dialog.h  arrows.c  arrows.h  axyftp.c  axyftp.h  buttonbar.c  buttonbar.h  buttons.c  buttons.h  dialogs.c  dialogs.h  dirinfo.c  dirinfo.h  dirlist.c  dirlist.h  dirname.c  dirname.h  fileinfo.c  fileinfo.h  ftp.c  ftp.h  ftp_xfer.c  ftp_xfer.h  functions.c  functions.h  little_dialogs.c  little_dialogs.h  main_frame.c  main_frame.h  multi.c  multi.h  options_advanced.c  options_advanced.h  options_data.c  options_data.h  (+36 more)
xmaxy/: CHANGES  INSTALL  LICENSE  Makefile  Makefile.am  Makefile.in  README  TODO  config.status  configure  configure.in
xmaxy/XmAxy/: List.c  List.h  ListP.h  Makefile  Makefile.am  Makefile.in  Notebook.c  Notebook.h  NotebookP.h  Util.c  Util.h  demo.c  link.xpm  version.h
xmaxy/doc/: Makefile  Makefile.am  Makefile.in  XmAxyList.3  XmAxyNotebook.3
xpms/: Makefile  Makefile.am  Makefile.in  doc.xpm  doclink.xpm  error.xpm  folder.xpm  photo16.xpm  photo256.xpm  question.xpm  up.xpm  warning.xpm
