dnl Process this file with autoconf to produce a configure script.
dnl define([AC_CACHE_LOAD],)
dnl define([AC_CACHE_SAVE],)

AC_INIT(Dt/ComboBox.c)
AM_INIT_AUTOMAKE(DtWidget,1.4.0)
AC_CONFIG_AUX_DIR(.)

dnl Checks for programs.
AM_PROG_CC_STDC
if test x$am_cv_prog_cc_stdc = xno ; then
  AC_MSG_ERROR(No ANSI C - compatible compiler found.)
fi

AC_PROG_CPP
AC_PROG_INSTALL
AC_PROG_MAKE_SET
AC_PROG_RANLIB

AC_PATH_XTRA
if test x$no_x = xyes ; then
  AC_MSG_ERROR(No X Window System libraries found.)
fi

AXY_LIB_XTHREADS

AXY_PATH_MOTIF
if test x$no_motif = xyes ; then
  AC_MSG_ERROR(No Motif libraries found.)
fi

AC_ARG_ENABLE(install-dt,
  [  --enable-install-dt=no   Disables installation of supplied Dt library],
  ,
  enable_install_dt=yes)

if test "x$enable_install_dt" != xno ; then
  INSTALL_AXY_H="\$(EXTRA_HEADERS)"
  INSTALL_AXY_L="\$(EXTRA_LIBRARIES)"
  AXY_H=
  AXY_L=
  AXY_DIRINC="\$(AXY_DIRINC)"
else
  INSTALL_AXY_H=
  INSTALL_AXY_L=
  AXY_H="\$(EXTRA_HEADRES)"
  AXY_L="\$(EXTRA_LIBRARIES)"
  AXY_DIRINC=
fi
AC_SUBST(INSTALL_AXY_H)
AC_SUBST(INSTALL_AXY_L)
AC_SUBST(AXY_H)
AC_SUBST(AXY_L)
AC_SUBST(AXY_DIRINC)

dnl Checks for libraries.
dnl Checks for header files.
dnl Checks for typedefs, structures, and compiler characteristics.
dnl Checks for library functions.

AC_OUTPUT(Dt/Makefile Makefile orig/Makefile \
    cwikla/Makefile cwikla-clean/Makefile \
    moz/Makefile moz-clean/Makefile jra/Makefile)

