dnl Process this file with autoconf to produce a configure script.
dnl define([AC_CACHE_LOAD],)
dnl define([AC_CACHE_SAVE],)

AC_INIT(XmAxy/List.c)
AM_INIT_AUTOMAKE(XmAxy,0.0.1)
AC_CONFIG_AUX_DIR(.)

dnl Checks for programs.
AM_PROG_CC_STDC
if test x$am_cv_prog_cc_stdc = xno ; then
  AC_MSG_ERROR(No ANSI C - compatible compiler found.)
fi

AC_PROG_CPP
AC_PROG_INSTALL
AC_PROG_MAKE_SET
AC_PROG_RANLIB

AC_PATH_XTRA
if test x$no_x = xyes ; then
  AC_MSG_ERROR(No X Window System libraries found.)
fi

AXY_LIB_XTHREADS

AXY_PATH_MOTIF
if test x$no_motif = xyes ; then
  AC_MSG_ERROR(No Motif libraries found.)
fi


AXY_PATH_XPM
if test x$no_xpm = xyes ; then
  DEMO_PROG=
else
  DEMO_PROG=demo
fi
AC_SUBST(DEMO_PROG)

AC_ARG_ENABLE(install-xmaxy,
[  --enable-install-xmaxy=no   Disables installation of supplied XmAxy library],
  ,
  enable_install_xmaxy=yes)

if test "x$enable_install_xmaxy" != xno ; then
  INSTALL_AXY_H="\$(EXTRA_HEADERS)"
  INSTALL_AXY_L="\$(EXTRA_LIBRARIES)"
  AXY_H=
  AXY_L=
  axy_doc=doc
  AXY_DIRINC="\$(AXY_DIRINC)"
else
  INSTALL_AXY_H=
  INSTALL_AXY_L=
  AXY_H="\$(EXTRA_HEADRES)"
  AXY_L="\$(EXTRA_LIBRARIES)"
  axy_doc=
  AXY_DIRINC=
fi
AC_SUBST(INSTALL_AXY_H)
AC_SUBST(INSTALL_AXY_L)
AC_SUBST(AXY_H)
AC_SUBST(AXY_L)
AC_SUBST(AXY_DIRINC)
AC_SUBST(axy_doc)

dnl Checks for libraries.
dnl Checks for header files.
dnl Checks for typedefs, structures, and compiler characteristics.
dnl Checks for library functions.

AC_OUTPUT(doc/Makefile XmAxy/Makefile Makefile)
