AUTOMAKE_OPTIONS=foreign

CLEANFILES=*~
MAINTAINERCLEANFILES=Makefile.in

helpdir=@helpdir@

help_DATA=doc.gif help.html link.gif panels.html up.gif artistic.txt \
          folder.gif intro.html main.html problems.html axyftp.html \
	  glossary.html lgpl.txt options.html session.html

EXTRA_DIST=$(help_DATA)
